--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <div class="about-content">
                 <div class="column left">
                     </style>
-                   <div class="blur"><img class="blur" src="images/lodu.png"></div> 
-                    
+                    <div class="blur"><img class="blur" src="images/lodu.png"></div>
+
                 </div>
                 <div class="column right">
                     <div class="text">I am Rishabh Pathak AKA<br>
@@ -338,9 +338,9 @@
                                 support the video tag.
                             </video>
                         </div>
-                        <div style="font-size: 15px !important;" class="text">Marvel at the stunning 3D rendering of a
-                            flaming sword, brought to life with Blender's artistry. Its fiery glow dances dynamically,
-                            evoking power and mystique, igniting the imagination with every flicker.
+                        <div style="font-size: 15px !important;" class="text">In a breathtaking 3D landscape, the
+                            Hanuman Ji statue stands tall amid a picturesque scene of rivers, mountains, and verdant
+                            trees, juxtaposed by the haunting remnants of a shipwreck, blending nature and history.
                         </div>
                         <a href="https://www.youtube.com/watch?v=6ovSPp8Ag9k" target="_blank"> <button class="btn"><i
                                     class="fa fa-youtube-play"></i> CLICK TO SEE FULL
@@ -358,9 +358,9 @@
                                 browser does not support the video tag.
                             </video>
                         </div>
-                        <div style="font-size: 15px !important;" class="text">In a mesmerizing scene crafted in Blender,
-                            a character strides towards a blazing 3D flaming sword. With fluid dolly camera animation
-                            capturing every step, anticipation mounts as the story unfolds with cinematic allure.</div>
+                        <div style="font-size: 15px !important;" class="text">Step into our 3D product demonstration and
+                            witness innovation come to life. Experience its features firsthand, feel its quality, and
+                            envision how it seamlessly fits into your life, enhancing your everyday experiences.</div>
                         <a href="https://www.youtube.com/watch?v=VzbKSmCJaX8" target="_blank"> <button class="btn"><i
                                     class="fa fa-youtube-play"></i> CLICK TO SEE FULL
                                 VIDEO</button></a>
@@ -387,9 +387,10 @@
                                 support the video tag.
                             </video>
                         </div>
-                        <div style="font-size: 15px !important;" class="text">A picturesque outdoor environment
-                            environment offers a perfect escape into the tranquility of </div>
-                        <a href="https://www.youtube.com/@JodEnvis/videos" target="_blank"> <button class="btn"><i
+                        <div style="font-size: 15px !important;" class="text">Marvel at the stunning 3D rendering of a
+                            flaming sword, brought to life with Blender's artistry. Its fiery glow dances dynamically,
+                            evoking power and mystique, igniting the imagination with every flicker. </div>
+                        <a href="https://youtube.com/shorts/BBajxTLj_no?si=qRux2AMfKz_ixEdV" target="_blank"> <button class="btn"><i
                                     class="fa fa-youtube-play"></i> CLICK TO SEE FULL
                                 VIDEO</button></a>
                     </div>
@@ -406,11 +407,12 @@
                                 support the video tag.
                             </video>
                         </div>
-                        <div style="font-size: 15px !important;" class="text">A picturesque outdoor environment
-                            environment offers a perfect escape.
+                        <div style="font-size: 15px !important;" class="text">In a mesmerizing scene crafted in Blender,
+                            a character strides towards a blazing 3D flaming sword. With fluid dolly camera animation
+                            capturing every step, anticipation mounts as the story unfolds with cinematic allure.
                         </div>
 
-                        <a href="https://www.youtube.com/@JodEnvis/videos" target="_blank"> <button class="btn"><i
+                        <a href="https://youtube.com/shorts/5VsJrchzCa4?feature=share" target="_blank"> <button class="btn"><i
                                     class="fa fa-youtube-play"></i> CLICK TO SEE FULL
                                 VIDEO </button></a>
 
@@ -514,7 +516,8 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a target="_blank" href="https://thinkliketushar.github.io/Portfolio/">Thinkliketushar</a> | <span class="far fa-copyright"></span> 2024 All rights
+        <span>Created By <a target="_blank" href="https://thinkliketushar.github.io/Portfolio/">Thinkliketushar</a> |
+            <span class="far fa-copyright"></span> 2024 All rights
             reserved.</span>
     </footer>
 
