--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="background-video">
         <video autoplay loop muted>
-            <source src="images/videos/Sample3.mp4" type="video/mp4">
+            <source src="images/videos/New/Intro.mp4" type="video/mp4">
             <!-- Additional sources for different video formats -->
         </video>
     </div>
@@ -200,7 +200,7 @@
                             </span> </div>
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="images/videos/Waterfalls.mp4" type="video/mp4"> Your browser does not
+                                <source src="images/videos/New/Waterfalls.mp4" type="video/mp4"> Your browser does not
                                 support the video tag.
                             </video>
                         </div>
@@ -220,7 +220,7 @@
                             </span></div>
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="images/videos/sample.mp4" type="video/mp4"> Your browser does not support
+                                <source src="images/videos/New/Construction Ruins.mp4" type="video/mp4"> Your browser does not support
                                 the video tag.
                             </video>
                         </div>
@@ -314,7 +314,7 @@
                         <div class="text">📀 Car Studio <span style="color: orange;"> ☢️UNREAL☢️ </span></div>
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="images/videos/CarStudio_Sample.mp4" type="video/mp4"> Your browser does not
+                                <source src="images/videos/New/Car.mp4" type="video/mp4"> Your browser does not
                                 support the video tag.
                             </video>
                         </div>
@@ -334,7 +334,7 @@
                         </div>
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="images/videos/HanumanJi_Sample.mp4" type="video/mp4"> Your browser does not
+                                <source src="images/videos/New/HanumanJi.mp4" type="video/mp4"> Your browser does not
                                 support the video tag.
                             </video>
                         </div>
@@ -354,7 +354,7 @@
                         <div class="text">📀 Product Demostration <span style="color: orange;"> ☢️UNREAL☢️ </span></div>
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="images/videos/ProductDemonstration_Sample.mp4" type="video/mp4"> Your
+                                <source src="images/videos/New/Product Demonstration.mp4" type="video/mp4"> Your
                                 browser does not support the video tag.
                             </video>
                         </div>
