--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="background-video">
         <video autoplay loop muted>
-            <source src="images/videos/New/Intro2.mp4" type="video/mp4">
+            <source src="images/videos/Sample3.mp4" type="video/mp4">
             <!-- Additional sources for different video formats -->
         </video>
     </div>
