--- a/index.html
+++ b/index.html
@@ -488,4 +488,44 @@
         </div>
     </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     <!-- footer section start -->
+    <footer>
+        <span>Created By <a target="_blank" href="https://thinkliketushar.github.io/Portfolio/">Thinkliketushar</a> |
+            <span class="far fa-copyright"></span> 2024 All rights
+            reserved.</span>
+    </footer>
+
+
+
+    <script src="script.js"></script>
+</body>
+
+
+    
 </html>
